deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/force-ssl-redirect":"true","nginx.ingress.kubernetes.io/ssl-passthrough":"true"},"name":"argocd-server-ingress","namespace":"argocd"},"spec":{"rules":[{"host":"argocd.jamesknott.ai","http":{"paths":[{"backend":{"serviceName":"argocd-server","servicePort":"https"},"path":"/"}]}}],"tls":[{"hosts": [...]
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  creationTimestamp: "2021-04-12T04:05:01Z"
  generation: 2
  managedFields:
  - apiVersion: extensions/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:cert-manager.io/cluster-issuer: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:kubernetes.io/ingress.class: {}
      f:spec:
        f:tls: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2021-04-12T04:05:01Z"
  - apiVersion: networking.k8s.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: nginx-ingress-controller
    operation: Update
    time: "2021-04-12T04:05:13Z"
  - apiVersion: extensions/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:nginx.ingress.kubernetes.io/backend-protocol: {}
          f:nginx.ingress.kubernetes.io/ssl-passthrough: {}
      f:spec:
        f:rules: {}
    manager: kubectl-edit
    operation: Update
    time: "2021-04-12T04:11:16Z"
  name: argocd-server-ingress
  namespace: argocd
  resourceVersion: "695085"
  selfLink: /apis/extensions/v1beta1/namespaces/argocd/ingresses/argocd-server-ingress
  uid: 4ea650b3-e6a3-420e-90b4-6a64500fb801
spec:
  rules:
  - host: argocd.jamesknott.ai
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: https
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - argocd.jamesknott.ai
    secretName: argocd-secret
status:
  loadBalancer:
    ingress:
    - ip: 45.79.243.173
